Add creating product endpoint without id
